--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <br>
         <br>
         <h3>Enter your gender</h3>
-        <input type="radio" name="Male" >
+       <input type="radio" name="gender" id="Male" >
         <label for="Male">Male</label>
         <br>
-        <input type="radio" name="Female" >
+        <input type="radio" name="gender" id="Female" >
         <label for="Female">Female</label>
         <br>
-        <input type="radio" name="other" >
+        <input type="radio" name="gender" id="other" >
         <label for="other">other</label>
          <br>
          <h3>Enter your address</h3>
